Simplify schematic net code at slight modification runtime cost